Fix z-index of context menu in peek. Fixes #146638

--- a/src/vs/editor/contrib/find/browser/findWidget.css
+++ b/src/vs/editor/contrib/find/browser/findWidget.css
@@ -6,7 +6,7 @@
 /* Find widget */
 .monaco-editor .find-widget {
 	position: absolute;
-	z-index: 35;
+	z-index: 37; /* must be higher than zone-widget and sticky-widget */
 	height: 33px;
 	overflow: hidden;
 	line-height: 19px;
