--- a/src/vs/editor/contrib/stickyScroll/browser/stickyScroll.css
+++ b/src/vs/editor/contrib/stickyScroll/browser/stickyScroll.css
@@ -30,6 +30,6 @@
 .monaco-editor .sticky-widget {
 	width : 100%;
 	box-shadow : var(--vscode-scrollbar-shadow) 0 3px 2px -2px;
-	z-index : 2;
+	z-index : 36; /* must be higher than zone-widget */
 	background-color : var(--vscode-editorStickyScroll-background);
 }
